@@ -1,7 +1,9 @@
 Changes since 0.2.8.3_beta3:
 - Chat prefix spam protection. Guards against prefix spam, such as when a
   user always changes their chat message color, or prefixes all messages
-  with a clan tag. Enable/disable with the PREFIX_SPAM_ENABLE setting.
+  with a clan tag. Toggle with the PREFIX_SPAM_ENABLE setting.
+- Fixed VOTING_MATURITY to use the time when the player entered as its 
+  reference time.
 
 Changes since 0.2.8.3_beta2:
 - Fixed 'invincibility' bug. It really was cycles freezing in time.
